--- a/ns_panova.ipynb
+++ b/ns_panova.ipynb
@@ -116,17 +116,16 @@
         "    def __init__(self):\n",
         "        super().__init__()\n",
         "        self.conv1 = nn.Conv2d(3, 6, 5)\n",
-        "        self.pool1 = nn.MaxPool2d(2, 2)\n",
+        "        self.pool = nn.MaxPool2d(2, 2)\n",
         "        self.conv2 = nn.Conv2d(6, 16, 5)\n",
-        "        self.pool2 = nn.MaxPool2d(2, 2)\n",
-        "        self.fc1 = nn.Linear(400, 120, bias=True)\n",
-        "        self.fc2 = nn.Linear(120, 84, bias=True)\n",
-        "        self.fc3 = nn.Linear(84, 10, bias=True)\n",
+        "        self.fc1 = nn.Linear(16 * 5 * 5, 120)\n",
+        "        self.fc2 = nn.Linear(120, 84)\n",
+        "        self.fc3 = nn.Linear(84, 10)\n",
         "\n",
         "    # реализация метода forward в классе Net\n",
-        "    def forward(self, input):\n",
-        "        x = self.pool1(F.logsigmoid(self.conv1(input)))\n",
-        "        x = self.pool2(F.logsigmoid(self.conv2(x)))\n",
+        "    def forward(self, x):\n",
+        "        x = self.pool(F.logsigmoid(self.conv1(x)))\n",
+        "        x = self.pool(F.logsigmoid(self.conv2(x)))\n",
         "        x = torch.flatten(x, 1)\n",
         "        x = F.logsigmoid(self.fc1(x))\n",
         "        x = F.logsigmoid(self.fc2(x))\n",
@@ -172,21 +171,18 @@
         "from torch.utils.tensorboard import SummaryWriter\n",
         "writer = SummaryWriter()\n",
         "target = torch.LongTensor([3])\n",
+        "criterion = nn.KLDivLoss()\n",
+        "optimizer = optim.RMSprop(net.parameters(), lr=0.001, momentum=0.9)\n",
         "\n",
-        "def train_evaluate(net):\n",
-        "\n",
-        "    criterion = nn.KLDivLoss()\n",
-        "    optimizer = optim.RMSprop(net.parameters(), lr=0.001, momentum=0.9)\n",
-        "    for epoch in range(10):\n",
-        "      running_loss = 0.0\n",
-        "      for i, data in enumerate(trainloader, 0):\n",
-        "        net.train()\n",
+        "for epoch in range(2):  # loop over the dataset multiple times\n",
+        "    running_loss = 0.0\n",
+        "    for i, data in enumerate(trainloader, 0):\n",
+        "# get the inputs; data is a list of [inputs, labels]\n",
         "        inputs, labels = data\n",
-        "        inputs, labels = inputs.to(device), labels.to(device)\n",
-        "\n",
-        "          # Обнуление градиента\n",
+        "# zero the parameter gradients\n",
         "        optimizer.zero_grad()\n",
-        "        outputs = net(input)\n",
+        "# forward + backward + optimize\n",
+        "        outputs = net(inputs),\n",
         "        loss = criterion(input,target)\n",
         "        loss.backward()\n",
         "        optimizer.step()\n",
