--- a/ns_avdoshin.ipynb
+++ b/ns_avdoshin.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMI2lFTbPYrhgdNTtJ0oTDY",
+      "authorship_tag": "ABX9TyMpt0RO/JFQhgjQrQtIsoUU",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 4,
       "metadata": {
         "id": "ZiSGo30MKPNz"
       },
@@ -61,10 +61,108 @@
         "                                         shuffle=False, num_workers=2)"
       ],
       "metadata": {
-        "id": "6NQw2YCfKXVL"
+        "id": "6NQw2YCfKXVL",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "46368c45-83c0-4093-a2b4-d711485ea1ac"
       },
-      "execution_count": 27,
-      "outputs": []
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Downloading http://yann.lecun.com/exdb/mnist/train-images-idx3-ubyte.gz\n",
+            "Downloading http://yann.lecun.com/exdb/mnist/train-images-idx3-ubyte.gz to ./data/MNIST/raw/train-images-idx3-ubyte.gz\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "100%|██████████| 9912422/9912422 [05:05<00:00, 32480.31it/s]\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Extracting ./data/MNIST/raw/train-images-idx3-ubyte.gz to ./data/MNIST/raw\n",
+            "\n",
+            "Downloading http://yann.lecun.com/exdb/mnist/train-labels-idx1-ubyte.gz\n",
+            "Failed to download (trying next):\n",
+            "HTTP Error 503: Service Unavailable\n",
+            "\n",
+            "Downloading https://ossci-datasets.s3.amazonaws.com/mnist/train-labels-idx1-ubyte.gz\n",
+            "Downloading https://ossci-datasets.s3.amazonaws.com/mnist/train-labels-idx1-ubyte.gz to ./data/MNIST/raw/train-labels-idx1-ubyte.gz\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "100%|██████████| 28881/28881 [00:00<00:00, 159801.61it/s]\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Extracting ./data/MNIST/raw/train-labels-idx1-ubyte.gz to ./data/MNIST/raw\n",
+            "\n",
+            "Downloading http://yann.lecun.com/exdb/mnist/t10k-images-idx3-ubyte.gz\n",
+            "Failed to download (trying next):\n",
+            "HTTP Error 503: Service Unavailable\n",
+            "\n",
+            "Downloading https://ossci-datasets.s3.amazonaws.com/mnist/t10k-images-idx3-ubyte.gz\n",
+            "Downloading https://ossci-datasets.s3.amazonaws.com/mnist/t10k-images-idx3-ubyte.gz to ./data/MNIST/raw/t10k-images-idx3-ubyte.gz\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "100%|██████████| 1648877/1648877 [00:03<00:00, 454433.75it/s]\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Extracting ./data/MNIST/raw/t10k-images-idx3-ubyte.gz to ./data/MNIST/raw\n",
+            "\n",
+            "Downloading http://yann.lecun.com/exdb/mnist/t10k-labels-idx1-ubyte.gz\n",
+            "Failed to download (trying next):\n",
+            "HTTP Error 503: Service Unavailable\n",
+            "\n",
+            "Downloading https://ossci-datasets.s3.amazonaws.com/mnist/t10k-labels-idx1-ubyte.gz\n",
+            "Downloading https://ossci-datasets.s3.amazonaws.com/mnist/t10k-labels-idx1-ubyte.gz to ./data/MNIST/raw/t10k-labels-idx1-ubyte.gz\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "100%|██████████| 4542/4542 [00:00<00:00, 3091112.89it/s]"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Extracting ./data/MNIST/raw/t10k-labels-idx1-ubyte.gz to ./data/MNIST/raw\n",
+            "\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -78,9 +176,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "qeK95eqGXZFi",
-        "outputId": "a2508bbb-06a2-4b1b-cf38-2fa7288b6e15"
+        "outputId": "763f56e6-0ca7-4dfb-b77f-6088b4bddc64"
       },
-      "execution_count": 28,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -125,9 +223,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "yDhnOeRnOYyy",
-        "outputId": "ddd6767b-1bab-4940-cc3e-46065a78522c"
+        "outputId": "4946a4a5-bd87-4ad2-bffb-357c39972032"
       },
-      "execution_count": 29,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -144,49 +242,56 @@
             ]
           },
           "metadata": {},
-          "execution_count": 29
+          "execution_count": 7
         }
       ]
     },
     {
       "cell_type": "code",
       "source": [
-        "input = torch.randn(1, 1, 28, 28)\n",
-        "out = net(input)\n",
-        "print(out.size())\n",
-        "target = torch.LongTensor([3])\n",
-        "loss_fn = nn.L1Loss()\n",
-        "err = loss_fn(out, target)\n",
-        "err.backward()\n",
-        "print(err)\n",
-        "print(net.conv1.weight.data.norm())\n",
-        "print(net.conv1.weight.grad.data.norm())"
+        "##criterion = nn.L1Loss()\n",
+        "criterion = nn.CrossEntropyLoss()\n",
+        "optimizer = torch.optim.RMSprop(net.parameters(), lr=0.001, momentum=0.9)\n",
+        "\n",
+        "for epoch in range(4):\n",
+        "    running_loss = 0.0\n",
+        "    running_acc = 0.0\n",
+        "    for i,data in enumerate(trainloader,1):\n",
+        "        img,label = data\n",
+        "        #img = Variable(img)\n",
+        "        #label = Variable(label)\n",
+        "        out = net(img)\n",
+        "        #print(out)\n",
+        "        loss = criterion(out,label) #loss\n",
+        "        running_loss += loss.item() * label.size(0)\n",
+        "        #total loss\n",
+        "        _,pred = torch.max(out,1)\n",
+        "        num_correct = (pred == label).sum()\n",
+        "        #accuracy = (pred == label).float().mean()\n",
+        "        running_acc += num_correct.item()\n",
+        "\n",
+        "        optimizer.zero_grad()\n",
+        "        loss.backward()\n",
+        "        optimizer.step()\n",
+        "    print('Train{} epoch, Loss: {:.6f},Acc: {:.6f}'.format(epoch+1,running_loss / (len(train_dataset)),running_acc / (len(train_dataset))))"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "ekDEsKA0Xo4H",
-        "outputId": "fbb99dbf-7c49-4101-f481-02833bf08a31"
+        "id": "noLDp3s7Ob4i",
+        "outputId": "ed9d6131-aac8-4bca-a3a9-4cce9f2ce3ce"
       },
-      "execution_count": 30,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "torch.Size([1, 10])\n",
-            "tensor(2.9971, grad_fn=<MeanBackward0>)\n",
-            "tensor(1.7940)\n",
-            "tensor(0.0038)\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "/usr/local/lib/python3.10/dist-packages/torch/nn/modules/loss.py:101: UserWarning: Using a target size (torch.Size([1])) that is different to the input size (torch.Size([1, 10])). This will likely lead to incorrect results due to broadcasting. Please ensure they have the same size.\n",
-            "  return F.l1_loss(input, target, reduction=self.reduction)\n"
+            "Train1 epoch, Loss: 0.083222,Acc: 0.974867\n",
+            "Train2 epoch, Loss: 0.055230,Acc: 0.982817\n",
+            "Train3 epoch, Loss: 0.046436,Acc: 0.985433\n",
+            "Train4 epoch, Loss: 0.037969,Acc: 0.988250\n"
           ]
         }
       ]
@@ -194,64 +299,58 @@
     {
       "cell_type": "code",
       "source": [
-        "# задаем параметры НС\n",
-        "input_dim = 784\n",
-        "output_dim = 10\n",
-        "learning_rate = 0.01\n",
-        "criterion = nn.L1Loss()\n",
-        "model = net(784 10)\n",
-        "optimizer = torch.optim.rmsprop(model.parameters(), lr=learning_rate)\n",
-        "seq_dim = 28\n",
-        "iter = 0\n",
-        "for epoch in range(10):\n",
-        "  for i, (images, labels) in enumerate(trainloader):\n",
-        "    model.train()\n",
-        " # Загрузка изображений в виде тензоров с возможностью накопления градиента\n",
-        "    images = images.view(-1, seq_dim, input_dim).requires_grad_()\n",
-        " # Обнуление градиента\n",
-        "    optimizer.zero_grad()\n",
-        " # Прямой проход\n",
-        "    outputs = model(images)\n",
-        " # Расчитываем функцию потерь\n",
-        "    loss = criterion(outputs, labels)\n",
-        " # Обратный проход\n",
-        "    loss.backward()\n",
-        " # Шаг градиентного спуска (изменение параметров НС)\n",
-        "    optimizer.step()\n",
-        "    iter += 1\n",
-        "    if iter % 500 == 0:\n",
-        " #производим оценки НС\n",
-        "      model.eval()\n",
-        "      correct = 0\n",
-        "      total = 0\n",
-        "      for images, labels in test_loader:\n",
-        "        images = images.view(-1, seq_dim, input_dim)\n",
-        "        outputs = model(images)\n",
-        "        _, predicted = torch.max(outputs.data, 1)\n",
-        "        total += labels.size(0)\n",
-        "        correct += (predicted == labels).sum()\n",
-        "        accuracy = 100 * correct / total\n",
-        "        print('Итерация: {}. Потери: {}. Точность: {}'.format(iter, loss.item(), accuracy))"
+        "net.eval()\n",
+        "eval_loss = 0\n",
+        "eval_acc = 0\n",
+        "for data in testloader:\n",
+        "    img,label = data\n",
+        "    #img = Variable(img,volatile=True)\n",
+        "    out = net(img)\n",
+        "    loss = criterion(out,label)\n",
+        "    eval_loss += loss.item() * label.size(0)    #total loss\n",
+        "    _,pred = torch.max(out,1)\n",
+        "    num_correct = (pred == label).sum()\n",
+        "    eval_acc += num_correct.item()\n",
+        "\n",
+        "print('Test Loss:{:.6f},Acc: {:.6f}'\n",
+        "      .format(eval_loss/ (len(test_dataset)),eval_acc * 1.0/(len(test_dataset))))"
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 106
+          "base_uri": "https://localhost:8080/"
         },
-        "id": "iYhURmaAsYTr",
-        "outputId": "a245d647-b5ea-4323-9639-6b4124a76905"
+        "id": "alPDin5mRNwY",
+        "outputId": "5684a172-974f-4164-df1d-1ae090797203"
       },
-      "execution_count": 37,
+      "execution_count": 14,
       "outputs": [
         {
-          "output_type": "error",
-          "ename": "SyntaxError",
-          "evalue": "invalid syntax. Perhaps you forgot a comma? (<ipython-input-37-55ff1bdc8d7e>, line 6)",
-          "traceback": [
-            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-37-55ff1bdc8d7e>\"\u001b[0;36m, line \u001b[0;32m6\u001b[0m\n\u001b[0;31m    model = net(1 10)\u001b[0m\n\u001b[0m                ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax. Perhaps you forgot a comma?\n"
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "/usr/lib/python3.10/multiprocessing/popen_fork.py:66: RuntimeWarning: os.fork() was called. os.fork() is incompatible with multithreaded code, and JAX is multithreaded, so this will likely lead to a deadlock.\n",
+            "  self.pid = os.fork()\n",
+            "/usr/lib/python3.10/multiprocessing/popen_fork.py:66: RuntimeWarning: os.fork() was called. os.fork() is incompatible with multithreaded code, and JAX is multithreaded, so this will likely lead to a deadlock.\n",
+            "  self.pid = os.fork()\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Test Loss:0.050044,Acc: 0.983000\n"
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "i3JLsQ-sIlrV"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
